<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal" >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Memorize it!"
            android:id="@+id/logo" android:textAlignment="center" android:textStyle="bold"
            android:layout_gravity="bottom|center_horizontal"/>
    <Button
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/btn_info"
            android:textSize="26sp"
            android:id="@+id/btnInfo"
            android:layout_gravity="center_horizontal" />

    <Button android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:background="@drawable/button"
            android:text="@string/lvl_p"
            android:textSize="26sp"
            android:id="@+id/btnLvlP"
            android:layout_gravity="center_horizontal"/>

    <Button android:layout_width="150dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/lvl_e"
            android:textSize="26sp"
            android:id="@+id/btnLvlE"
            android:layout_gravity="center_horizontal"/>

    <Button android:layout_width="150dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/lvl_n"
            android:textSize="26sp"
            android:id="@+id/btnLvlN"
            android:layout_gravity="center_horizontal"/>

    <Button android:layout_width="150dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/lvl_x"
            android:textSize="26sp"
            android:id="@+id/btnLvlX"
            android:layout_gravity="center_horizontal"/>

    <Button android:layout_width="150dp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/lvl_m"
            android:textSize="26sp"
            android:id="@+id/btnLvlM"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>
